k8s/django.yaml
###########################
# Deployment
###########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: mariuscaptari/django
          args:
            - /start
          ports:
            - containerPort: 8000

---
###########################
# Cluster IP Service
###########################
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
