k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ip
                port:
                  number: 3000
          - path: /ws/
            pathType: Prefix
            backend:
              service:
                name: django-ip
                port:
                  number: 8000
